# GIS

./: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  index.html  north_usman.gpkg  north_usman_buildings.geojson  northusman1.gpkg  package-lock.json  package.json  render.yaml  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-brave-bush-0800de610.yml  dev_gis-backend.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260629_0001_create_buildings_with_postgis.py  20260629_0002_seed_second_building.py  20260629_0003_sync_buildings_from_raw_geometry_column.py
backend/app/: main.py
backend/app/api/: buildings.py  sensors.py  sensorthings.py
backend/app/core/: config.py  database.py  migrations.py  sync.py
backend/app/models/: building.py
backend/app/repositories/: building_repository.py
backend/app/schemas/: building.py  sensor.py  sensorthings.py
backend/app/services/: building_service.py  sensor_service.py  sensorthings_service.py
public/: building.geojson  north_usman_satellite_rendered.tif  north_usman_satellite_rendered.tif.aux.xml  north_usman_satellite_rendered_.tif  north_usman_satellite_rendered_.tif.aux.xml  north_usman_satellite_rendered_8bit.tif
public/satellite/: googlemaps.html  leaflet.html  mapml.mapml  openlayers.html
scripts/: ingest_sensor.py
src/: App.jsx  styles.css
src/components/: DetailsPanel.jsx  MapPanel.jsx  MapTooltip.jsx  SensorCharts.jsx
src/config/: map.js
src/hooks/: useBuildings.js  useMapInit.js  (+1 more)
